--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r32689)
-# Mon Jul 30 19:00:16 2012
+# Wed Aug  1 15:48:46 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1521,11 +1521,11 @@ CONFIG_PACKAGE_luci-lib-lmo=y
 # CONFIG_PACKAGE_luci-lib-lucid-http is not set
 # CONFIG_PACKAGE_luci-lib-lucid-rpc is not set
 CONFIG_PACKAGE_luci-lib-nixio=y
-# CONFIG_PACKAGE_luci-lib-nixio_notls is not set
+CONFIG_PACKAGE_luci-lib-nixio_notls=y
 # CONFIG_PACKAGE_luci-lib-nixio_axtls is not set
-CONFIG_PACKAGE_luci-lib-nixio_cyassl=y
+# CONFIG_PACKAGE_luci-lib-nixio_cyassl is not set
 # CONFIG_PACKAGE_luci-lib-nixio_openssl is not set
-CONFIG_PACKAGE_luci-lib-px5g=y
+# CONFIG_PACKAGE_luci-lib-px5g is not set
 CONFIG_PACKAGE_luci-lib-sys=y
 CONFIG_PACKAGE_luci-lib-web=y
 
@@ -2534,8 +2534,8 @@ CONFIG_FASTD_DISABLE_METHOD_AES128_GCM=y
 CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd_debug is not set
 # CONFIG_PACKAGE_uhttpd-mod-lua is not set
-CONFIG_PACKAGE_uhttpd-mod-tls=y
-CONFIG_PACKAGE_uhttpd-mod-tls_cyassl=y
+# CONFIG_PACKAGE_uhttpd-mod-tls is not set
+# CONFIG_PACKAGE_uhttpd-mod-tls_cyassl is not set
 # CONFIG_PACKAGE_uhttpd-mod-tls_openssl is not set
 # CONFIG_PACKAGE_uhttpd-mod-ubus is not set
 # CONFIG_PACKAGE_wccpd is not set
@@ -2791,7 +2791,7 @@ CONFIG_PACKAGE_libxtables=y
 # SSL
 #
 # CONFIG_PACKAGE_libaxtls is not set
-CONFIG_PACKAGE_libcyassl=y
+# CONFIG_PACKAGE_libcyassl is not set
 # CONFIG_PACKAGE_libgnutls is not set
 # CONFIG_PACKAGE_libgnutls-extra is not set
 # CONFIG_PACKAGE_libgnutls-openssl is not set
@@ -3545,7 +3545,7 @@ CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_pv is not set
 # CONFIG_PACKAGE_pwcrypt is not set
 # CONFIG_PACKAGE_pwgen is not set
-CONFIG_PACKAGE_px5g=y
+# CONFIG_PACKAGE_px5g is not set
 # CONFIG_PACKAGE_rbcfg is not set
 # CONFIG_PACKAGE_rcs is not set
 # CONFIG_PACKAGE_remind is not set
