--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r32689)
-# Wed Aug  1 15:48:46 2012
+# Thu Aug  2 20:21:24 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1838,10 +1838,6 @@ CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
 # CONFIG_PACKAGE_kmod-softdog is not set
 # CONFIG_PACKAGE_kmod-ssb is not set
 CONFIG_PACKAGE_kmod-wdt-ath79=y
-# CONFIG_PACKAGE_kmod-zaptel14 is not set
-# CONFIG_PACKAGE_kmod-zaptel14-dummy is not set
-# CONFIG_PACKAGE_kmod-zaptel14-wctdm is not set
-# CONFIG_PACKAGE_kmod-zaptel14-wcusb is not set
 
 #
 # PCMCIA support
@@ -1899,6 +1895,10 @@ CONFIG_PACKAGE_kmod-wdt-ath79=y
 #
 # Voice over IP
 #
+# CONFIG_PACKAGE_kmod-zaptel14 is not set
+# CONFIG_PACKAGE_kmod-zaptel14-dummy is not set
+# CONFIG_PACKAGE_kmod-zaptel14-wctdm is not set
+# CONFIG_PACKAGE_kmod-zaptel14-wcusb is not set
 
 #
 # W1 support
@@ -2225,11 +2225,7 @@ CONFIG_PACKAGE_avahi-daemon=y
 # CONFIG_PACKAGE_bind-server is not set
 # CONFIG_PACKAGE_bind-tools is not set
 # CONFIG_PACKAGE_ddns-scripts is not set
-# CONFIG_PACKAGE_dhcp-client is not set
 # CONFIG_PACKAGE_dhcp-forwarder is not set
-# CONFIG_PACKAGE_dhcp-omshell is not set
-# CONFIG_PACKAGE_dhcp-relay is not set
-# CONFIG_PACKAGE_dhcp-server is not set
 # CONFIG_PACKAGE_dhcpcd is not set
 # CONFIG_PACKAGE_djbdns-axfrdns is not set
 # CONFIG_PACKAGE_djbdns-base is not set
@@ -2246,6 +2242,14 @@ CONFIG_PACKAGE_avahi-daemon=y
 # CONFIG_PACKAGE_howl-nifd is not set
 # CONFIG_PACKAGE_howl-utils is not set
 # CONFIG_PACKAGE_ipupdate is not set
+# CONFIG_PACKAGE_isc-dhcp-client-ipv4 is not set
+# CONFIG_PACKAGE_isc-dhcp-client-ipv6 is not set
+# CONFIG_PACKAGE_isc-dhcp-omshell-ipv4 is not set
+# CONFIG_PACKAGE_isc-dhcp-omshell-ipv6 is not set
+# CONFIG_PACKAGE_isc-dhcp-relay-ipv4 is not set
+# CONFIG_PACKAGE_isc-dhcp-relay-ipv6 is not set
+# CONFIG_PACKAGE_isc-dhcp-server-ipv4 is not set
+# CONFIG_PACKAGE_isc-dhcp-server-ipv6 is not set
 # CONFIG_PACKAGE_maradns is not set
 # CONFIG_PACKAGE_mdns-utils is not set
 # CONFIG_PACKAGE_mdnsd is not set
@@ -2426,66 +2430,77 @@ CONFIG_FASTD_DISABLE_METHOD_AES128_GCM=y
 # CONFIG_PACKAGE_pptpd is not set
 # CONFIG_PACKAGE_quicktun is not set
 # CONFIG_PACKAGE_ssltunnel is not set
-# CONFIG_PACKAGE_strongswan4 is not set
-# CONFIG_PACKAGE_strongswan4-app-charon is not set
-# CONFIG_PACKAGE_strongswan4-app-pluto is not set
-# CONFIG_PACKAGE_strongswan4-default is not set
-# CONFIG_PACKAGE_strongswan4-full is not set
-# CONFIG_PACKAGE_strongswan4-libfast is not set
-# CONFIG_PACKAGE_strongswan4-minimal is not set
-# CONFIG_PACKAGE_strongswan4-mod-aes is not set
-# CONFIG_PACKAGE_strongswan4-mod-af-alg is not set
-# CONFIG_PACKAGE_strongswan4-mod-agent is not set
-# CONFIG_PACKAGE_strongswan4-mod-attr is not set
-# CONFIG_PACKAGE_strongswan4-mod-attr-sql is not set
-# CONFIG_PACKAGE_strongswan4-mod-blowfish is not set
-# CONFIG_PACKAGE_strongswan4-mod-constraints is not set
-# CONFIG_PACKAGE_strongswan4-mod-coupling is not set
-# CONFIG_PACKAGE_strongswan4-mod-curl is not set
-# CONFIG_PACKAGE_strongswan4-mod-des is not set
-# CONFIG_PACKAGE_strongswan4-mod-dhcp is not set
-# CONFIG_PACKAGE_strongswan4-mod-dnskey is not set
-# CONFIG_PACKAGE_strongswan4-mod-duplicheck is not set
-# CONFIG_PACKAGE_strongswan4-mod-eap-md5 is not set
-# CONFIG_PACKAGE_strongswan4-mod-eap-mschapv2 is not set
-# CONFIG_PACKAGE_strongswan4-mod-eap-radius is not set
-# CONFIG_PACKAGE_strongswan4-mod-farp is not set
-# CONFIG_PACKAGE_strongswan4-mod-fips-prf is not set
-# CONFIG_PACKAGE_strongswan4-mod-gcrypt is not set
-# CONFIG_PACKAGE_strongswan4-mod-gmp is not set
-# CONFIG_PACKAGE_strongswan4-mod-hmac is not set
-# CONFIG_PACKAGE_strongswan4-mod-kernel-klips is not set
-# CONFIG_PACKAGE_strongswan4-mod-kernel-netlink is not set
-# CONFIG_PACKAGE_strongswan4-mod-kernel-pfkey is not set
-# CONFIG_PACKAGE_strongswan4-mod-ldap is not set
-# CONFIG_PACKAGE_strongswan4-mod-led is not set
-# CONFIG_PACKAGE_strongswan4-mod-load-tester is not set
-# CONFIG_PACKAGE_strongswan4-mod-md5 is not set
-# CONFIG_PACKAGE_strongswan4-mod-medcli is not set
-# CONFIG_PACKAGE_strongswan4-mod-medsrv is not set
-# CONFIG_PACKAGE_strongswan4-mod-mysql is not set
-# CONFIG_PACKAGE_strongswan4-mod-pem is not set
-# CONFIG_PACKAGE_strongswan4-mod-pgp is not set
-# CONFIG_PACKAGE_strongswan4-mod-pkcs1 is not set
-# CONFIG_PACKAGE_strongswan4-mod-pubkey is not set
-# CONFIG_PACKAGE_strongswan4-mod-random is not set
-# CONFIG_PACKAGE_strongswan4-mod-resolve is not set
-# CONFIG_PACKAGE_strongswan4-mod-revocation is not set
-# CONFIG_PACKAGE_strongswan4-mod-sha1 is not set
-# CONFIG_PACKAGE_strongswan4-mod-sha2 is not set
-# CONFIG_PACKAGE_strongswan4-mod-smp is not set
-# CONFIG_PACKAGE_strongswan4-mod-socket-default is not set
-# CONFIG_PACKAGE_strongswan4-mod-socket-raw is not set
-# CONFIG_PACKAGE_strongswan4-mod-sql is not set
-# CONFIG_PACKAGE_strongswan4-mod-sqlite is not set
-# CONFIG_PACKAGE_strongswan4-mod-stroke is not set
-# CONFIG_PACKAGE_strongswan4-mod-uci is not set
-# CONFIG_PACKAGE_strongswan4-mod-updown is not set
-# CONFIG_PACKAGE_strongswan4-mod-whitelist is not set
-# CONFIG_PACKAGE_strongswan4-mod-x509 is not set
-# CONFIG_PACKAGE_strongswan4-mod-xauth is not set
-# CONFIG_PACKAGE_strongswan4-mod-xcbc is not set
-# CONFIG_PACKAGE_strongswan4-utils is not set
+# CONFIG_PACKAGE_strongswan is not set
+# CONFIG_PACKAGE_strongswan-charon is not set
+# CONFIG_PACKAGE_strongswan-default is not set
+# CONFIG_PACKAGE_strongswan-full is not set
+# CONFIG_PACKAGE_strongswan-libfast is not set
+# CONFIG_PACKAGE_strongswan-minimal is not set
+# CONFIG_PACKAGE_strongswan-mod-addrblock is not set
+# CONFIG_PACKAGE_strongswan-mod-aes is not set
+# CONFIG_PACKAGE_strongswan-mod-af-alg is not set
+# CONFIG_PACKAGE_strongswan-mod-agent is not set
+# CONFIG_PACKAGE_strongswan-mod-attr is not set
+# CONFIG_PACKAGE_strongswan-mod-attr-sql is not set
+# CONFIG_PACKAGE_strongswan-mod-blowfish is not set
+# CONFIG_PACKAGE_strongswan-mod-ccm is not set
+# CONFIG_PACKAGE_strongswan-mod-cmac is not set
+# CONFIG_PACKAGE_strongswan-mod-constraints is not set
+# CONFIG_PACKAGE_strongswan-mod-coupling is not set
+# CONFIG_PACKAGE_strongswan-mod-ctr is not set
+# CONFIG_PACKAGE_strongswan-mod-curl is not set
+# CONFIG_PACKAGE_strongswan-mod-des is not set
+# CONFIG_PACKAGE_strongswan-mod-dhcp is not set
+# CONFIG_PACKAGE_strongswan-mod-dnskey is not set
+# CONFIG_PACKAGE_strongswan-mod-duplicheck is not set
+# CONFIG_PACKAGE_strongswan-mod-eap-identity is not set
+# CONFIG_PACKAGE_strongswan-mod-eap-md5 is not set
+# CONFIG_PACKAGE_strongswan-mod-eap-mschapv2 is not set
+# CONFIG_PACKAGE_strongswan-mod-farp is not set
+# CONFIG_PACKAGE_strongswan-mod-fips-prf is not set
+# CONFIG_PACKAGE_strongswan-mod-gcm is not set
+# CONFIG_PACKAGE_strongswan-mod-gcrypt is not set
+# CONFIG_PACKAGE_strongswan-mod-gmp is not set
+# CONFIG_PACKAGE_strongswan-mod-ha is not set
+# CONFIG_PACKAGE_strongswan-mod-hmac is not set
+# CONFIG_PACKAGE_strongswan-mod-kernel-klips is not set
+# CONFIG_PACKAGE_strongswan-mod-kernel-netlink is not set
+# CONFIG_PACKAGE_strongswan-mod-kernel-pfkey is not set
+# CONFIG_PACKAGE_strongswan-mod-ldap is not set
+# CONFIG_PACKAGE_strongswan-mod-led is not set
+# CONFIG_PACKAGE_strongswan-mod-load-tester is not set
+# CONFIG_PACKAGE_strongswan-mod-md4 is not set
+# CONFIG_PACKAGE_strongswan-mod-md5 is not set
+# CONFIG_PACKAGE_strongswan-mod-mysql is not set
+# CONFIG_PACKAGE_strongswan-mod-nonce is not set
+# CONFIG_PACKAGE_strongswan-mod-openssl is not set
+# CONFIG_PACKAGE_strongswan-mod-pem is not set
+# CONFIG_PACKAGE_strongswan-mod-pgp is not set
+# CONFIG_PACKAGE_strongswan-mod-pkcs1 is not set
+# CONFIG_PACKAGE_strongswan-mod-pkcs11 is not set
+# CONFIG_PACKAGE_strongswan-mod-pkcs8 is not set
+# CONFIG_PACKAGE_strongswan-mod-pubkey is not set
+# CONFIG_PACKAGE_strongswan-mod-random is not set
+# CONFIG_PACKAGE_strongswan-mod-resolve is not set
+# CONFIG_PACKAGE_strongswan-mod-revocation is not set
+# CONFIG_PACKAGE_strongswan-mod-sha1 is not set
+# CONFIG_PACKAGE_strongswan-mod-sha2 is not set
+# CONFIG_PACKAGE_strongswan-mod-smp is not set
+# CONFIG_PACKAGE_strongswan-mod-socket-default is not set
+# CONFIG_PACKAGE_strongswan-mod-socket-dynamic is not set
+# CONFIG_PACKAGE_strongswan-mod-socket-raw is not set
+# CONFIG_PACKAGE_strongswan-mod-sql is not set
+# CONFIG_PACKAGE_strongswan-mod-sqlite is not set
+# CONFIG_PACKAGE_strongswan-mod-stroke is not set
+# CONFIG_PACKAGE_strongswan-mod-test-vectors is not set
+# CONFIG_PACKAGE_strongswan-mod-uci is not set
+# CONFIG_PACKAGE_strongswan-mod-updown is not set
+# CONFIG_PACKAGE_strongswan-mod-whitelist is not set
+# CONFIG_PACKAGE_strongswan-mod-x509 is not set
+# CONFIG_PACKAGE_strongswan-mod-xauth-eap is not set
+# CONFIG_PACKAGE_strongswan-mod-xauth-generic is not set
+# CONFIG_PACKAGE_strongswan-mod-xcbc is not set
+# CONFIG_PACKAGE_strongswan-utils is not set
 # CONFIG_PACKAGE_tinc is not set
 # CONFIG_PACKAGE_uanytun is not set
 # CONFIG_PACKAGE_uanytun-nocrypt is not set
@@ -2535,8 +2550,6 @@ CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd_debug is not set
 # CONFIG_PACKAGE_uhttpd-mod-lua is not set
 # CONFIG_PACKAGE_uhttpd-mod-tls is not set
-# CONFIG_PACKAGE_uhttpd-mod-tls_cyassl is not set
-# CONFIG_PACKAGE_uhttpd-mod-tls_openssl is not set
 # CONFIG_PACKAGE_uhttpd-mod-ubus is not set
 # CONFIG_PACKAGE_wccpd is not set
 
@@ -2565,6 +2578,7 @@ CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_kismet-drone is not set
 # CONFIG_PACKAGE_kismet-server is not set
 # CONFIG_PACKAGE_mdk3 is not set
+# CONFIG_PACKAGE_reaver is not set
 # CONFIG_PACKAGE_snort-wireless is not set
 # CONFIG_PACKAGE_snort-wireless-mysql is not set
 # CONFIG_PACKAGE_snort-wireless-pgsql is not set
@@ -2608,6 +2622,7 @@ CONFIG_PACKAGE_crda=y
 # CONFIG_PACKAGE_hostapd is not set
 # CONFIG_PACKAGE_hostapd-mini is not set
 # CONFIG_PACKAGE_hostapd-utils is not set
+# CONFIG_PACKAGE_hpavcfg is not set
 # CONFIG_PACKAGE_hping3 is not set
 # CONFIG_PACKAGE_httping is not set
 # CONFIG_PACKAGE_httping-nossl is not set
@@ -3065,6 +3080,7 @@ CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_libxapian is not set
 # CONFIG_PACKAGE_libxml2 is not set
 # CONFIG_PACKAGE_libxslt is not set
+# CONFIG_PACKAGE_libzip is not set
 # CONFIG_PACKAGE_libzstream is not set
 # CONFIG_PACKAGE_linux-atm is not set
 # CONFIG_PACKAGE_mxml is not set
@@ -3350,6 +3366,7 @@ CONFIG_PACKAGE_ubusd=y
 #
 # compression
 #
+# CONFIG_PACKAGE_libzip-utils is not set
 # CONFIG_PACKAGE_unrar is not set
 # CONFIG_PACKAGE_unzip is not set
 # CONFIG_PACKAGE_zip is not set
@@ -3405,6 +3422,7 @@ CONFIG_PACKAGE_ubusd=y
 # CONFIG_PACKAGE_zoneinfo-simple is not set
 # CONFIG_PACKAGE_zoneinfo-southamerica is not set
 # CONFIG_PACKAGE_alsa-utils is not set
+# CONFIG_PACKAGE_alsa-utils-seq is not set
 # CONFIG_PACKAGE_alsa-utils-tests is not set
 # CONFIG_PACKAGE_anyremote is not set
 # CONFIG_PACKAGE_ap51-flash is not set
@@ -3610,7 +3628,6 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_uuidd is not set
 # CONFIG_PACKAGE_uuidgen is not set
 # CONFIG_PACKAGE_v4l-utils is not set
-# CONFIG_PACKAGE_valgrind is not set
 # CONFIG_PACKAGE_watchcat is not set
 # CONFIG_PACKAGE_wattsup is not set
 # CONFIG_PACKAGE_whereis is not set
