--- a/files/lib/freifunk/mesh-vpn-up.conf
+++ b/files/lib/freifunk/mesh-vpn-up.conf
@@ -1,5 +1,19 @@
 on up "
-	oIFS=\"$IFS\"; IFS=\":\"; set -- $(uci get wireless.radio0.macaddr); IFS=\"$oIFS\"
+	. /lib/ar71xx.sh
+
+	board=\"$(ar71xx_board_name)\"
+
+	case \"$board\" in
+		tl-wdr3600|\
+		tl-wdr4300)
+		        macaddr=\"$(uci get wireless.radio1.macaddr)\"
+			;;
+		*)
+			macaddr=\"$(uci get wireless.radio0.macaddr)\"
+			;;
+	esac
+
+	oIFS=\"$IFS\"; IFS=\":\"; set -- $macaddr; IFS=\"$oIFS\"
 	b2mask=0x02
 
 	macaddr=$(printf \"%02x:%s:%s:%02x:%s:%s\" $(( 0x$1 | $b2mask )) $2 $3 $(( (0x$4 + 1) % 0x100 )) $5 $6)
