Adjust to config_mode changes

--- a/files/lib/freifunk/mesh-vpn-up.conf
+++ b/files/lib/freifunk/mesh-vpn-up.conf
@@ -8,11 +8,11 @@ on up "
 	echo 1 > /proc/sys/net/ipv6/conf/$INTERFACE/disable_ipv6
 	batctl if add $INTERFACE
 
-	if [ \"$(uci get ffhl.@bandwidth[0].enabled)\" = 1 ]; then
-		tc qdisc add dev $INTERFACE root tbf rate \"$(uci get ffhl.@bandwidth[0].upstream)kbit\" latency 50ms burst 2k
+	if [ \"$(uci get freifunk.@bandwidth[0].enabled)\" = 1 ]; then
+		tc qdisc add dev $INTERFACE root tbf rate \"$(uci get freifunk.@bandwidth[0].upstream)kbit\" latency 50ms burst 2k
 
 		tc qdisc add dev $INTERFACE handle ffff: ingress
-		tc filter add dev $INTERFACE parent ffff: u32 match u8 00 00 at 0 police rate \"$(uci get ffhl.@bandwidth[0].downstream)kbit\" burst 10k drop flowid :1
+		tc filter add dev $INTERFACE parent ffff: u32 match u8 00 00 at 0 police rate \"$(uci get freifunk.@bandwidth[0].downstream)kbit\" burst 10k drop flowid :1
 	fi
 
 	ip link set up dev $INTERFACE
