--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r33444)
-# Fri Sep 21 17:18:01 2012
+# Thu Sep 27 19:28:25 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -2073,6 +2073,7 @@ CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_nagios-plugins is not set
 # CONFIG_PACKAGE_nrpe is not set
 # CONFIG_PACKAGE_osirisd is not set
+# CONFIG_PACKAGE_ostiary is not set
 # CONFIG_PACKAGE_send-nsca is not set
 # CONFIG_PACKAGE_sudo is not set
 # CONFIG_PACKAGE_syslog-ng is not set
@@ -2425,6 +2426,7 @@ CONFIG_PACKAGE_avahi-daemon=y
 # CONFIG_PACKAGE_baresip is not set
 # CONFIG_PACKAGE_freeswitch is not set
 # CONFIG_PACKAGE_kamailio is not set
+# CONFIG_PACKAGE_kamailio3 is not set
 # CONFIG_PACKAGE_libopenzap is not set
 # CONFIG_PACKAGE_miax is not set
 # CONFIG_PACKAGE_openser is not set
@@ -2574,6 +2576,11 @@ CONFIG_FASTD_ENABLE_METHOD_XSALSA20_POLY1305=y
 # CONFIG_PACKAGE_subversion-libs is not set
 
 #
+# Web
+#
+# CONFIG_PACKAGE_gatling is not set
+
+#
 # Web Servers/Proxies
 #
 # CONFIG_PACKAGE_apache is not set
@@ -2591,6 +2598,7 @@ CONFIG_FASTD_ENABLE_METHOD_XSALSA20_POLY1305=y
 # CONFIG_PACKAGE_mini-httpd-openssl is not set
 # CONFIG_PACKAGE_nginx is not set
 # CONFIG_PACKAGE_obfsproxy is not set
+# CONFIG_PACKAGE_pdnsd is not set
 # CONFIG_PACKAGE_pepsal is not set
 # CONFIG_PACKAGE_polipo is not set
 # CONFIG_PACKAGE_privoxy is not set
@@ -2658,6 +2666,8 @@ CONFIG_PACKAGE_crda=y
 # CONFIG_PACKAGE_darkstat is not set
 # CONFIG_PACKAGE_ditg is not set
 # CONFIG_PACKAGE_dmapd is not set
+# CONFIG_PACKAGE_dns2tcp is not set
+# CONFIG_PACKAGE_dns2tcpd is not set
 # CONFIG_PACKAGE_dsl-qos-queue is not set
 # CONFIG_PACKAGE_e169-stats is not set
 # CONFIG_PACKAGE_elinks is not set
@@ -2736,6 +2746,7 @@ CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_net-tools-slattach is not set
 # CONFIG_PACKAGE_netcat is not set
 # CONFIG_PACKAGE_netdiscover is not set
+# CONFIG_PACKAGE_netio is not set
 # CONFIG_PACKAGE_netperf is not set
 # CONFIG_PACKAGE_netpipe is not set
 # CONFIG_PACKAGE_netstat-nat is not set
@@ -2750,6 +2761,7 @@ CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_oping is not set
 # CONFIG_PACKAGE_p910nd is not set
 # CONFIG_PACKAGE_paris-traceroute is not set
+# CONFIG_PACKAGE_peervpn is not set
 # CONFIG_PACKAGE_pen is not set
 # CONFIG_PACKAGE_portmap is not set
 # CONFIG_PACKAGE_ppp is not set
@@ -2959,6 +2971,7 @@ CONFIG_PACKAGE_libblobmsg-json=y
 # CONFIG_PACKAGE_libcurl is not set
 # CONFIG_PACKAGE_libcwiid is not set
 CONFIG_PACKAGE_libdaemon=y
+# CONFIG_PACKAGE_libdaq is not set
 # CONFIG_PACKAGE_libdb47 is not set
 # CONFIG_PACKAGE_libdbi is not set
 CONFIG_PACKAGE_libdbus=y
@@ -3688,6 +3701,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_whiptail is not set
 # CONFIG_PACKAGE_wifitoggle is not set
 # CONFIG_PACKAGE_wminput is not set
+# CONFIG_PACKAGE_wview is not set
 # CONFIG_PACKAGE_wx200d is not set
 # CONFIG_PACKAGE_xdelta3 is not set
 # CONFIG_PACKAGE_xfs-fsck is not set
@@ -3828,6 +3842,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_python-egenix-mx is not set
 # CONFIG_PACKAGE_python-event is not set
 # CONFIG_PACKAGE_python-expat is not set
+# CONFIG_PACKAGE_python-flup is not set
 # CONFIG_PACKAGE_python-gdbm is not set
 # CONFIG_PACKAGE_python-gobject is not set
 # CONFIG_PACKAGE_python-gzip is not set
@@ -3835,6 +3850,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_python-imaging-library is not set
 # CONFIG_PACKAGE_python-json is not set
 # CONFIG_PACKAGE_python-kid is not set
+# CONFIG_PACKAGE_python-mimms is not set
 # CONFIG_PACKAGE_python-mini is not set
 # CONFIG_PACKAGE_python-mysql is not set
 # CONFIG_PACKAGE_python-ncurses is not set
@@ -3845,6 +3861,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_python-smbus is not set
 # CONFIG_PACKAGE_python-sqlite is not set
 # CONFIG_PACKAGE_python-sqlite3 is not set
+# CONFIG_PACKAGE_python-webpy is not set
 # CONFIG_PACKAGE_python-xapian is not set
 # CONFIG_PACKAGE_python-yapsnmp is not set
 # CONFIG_PACKAGE_python2-chardet is not set
