--- a/files/lib/freifunk/mesh-vpn/fastd.conf
+++ b/files/lib/freifunk/mesh-vpn/fastd.conf
@@ -1,3 +1,8 @@
+peer group "backbone" {
+	peer limit 2;
+	include peers from "backbone";
+}
+
 on up "
 	. /lib/ar71xx.sh
 
@@ -18,10 +23,6 @@ on up "
 
 	macaddr=$(printf \"%02x:%s:%s:%02x:%s:%s\" $(( 0x$1 | $b2mask )) $2 $3 $(( (0x$4 + 1) % 0x100 )) $5 $6)
 
-	ip link set address $macaddr dev $INTERFACE
-	echo 1 > /proc/sys/net/ipv6/conf/$INTERFACE/disable_ipv6
-	batctl if add $INTERFACE
-
 	if [ \"$(uci get freifunk.@bandwidth[0].enabled)\" = 1 ]; then
 		tc qdisc add dev $INTERFACE root tbf rate \"$(uci get freifunk.@bandwidth[0].upstream)kbit\" latency 50ms burst 2k
 
@@ -29,7 +30,7 @@ on up "
 		tc filter add dev $INTERFACE parent ffff: u32 match u8 00 00 at 0 police rate \"$(uci get freifunk.@bandwidth[0].downstream)kbit\" burst 10k drop flowid :1
 	fi
 
-	ip link set up dev $INTERFACE
+	ip link set address $macaddr up dev $INTERFACE
 
 	exit 0
 ";
