Restrict avahi to the freifunk interface

--- a/files/etc/avahi/avahi-daemon.conf
+++ b/files/etc/avahi/avahi-daemon.conf
@@ -5,6 +5,7 @@ use-ipv4=no
 use-ipv6=yes
 check-response-ttl=no
 use-iff-running=no
+allow-interfaces=br-freifunk
 
 [publish]
 publish-addresses=yes
